[package]
name = "authmiddleware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
env_logger = "0.9"
futures-util = { version = "0.3.7", default-features = false, features = ["std"] }
log = "0.4"
pin-project = "1"
# base64="0.13.0"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking","json"] }
# futures = "0.3"
# actix-service = "2"
serde = { version="1.0.115", features=["derive"]}
