[package]
name = "authmiddleware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
env_logger = "0.9"
futures-util = { version = "0.3.7", default-features = false, features = ["std"] }
log = "0.4"
pin-project = "1"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version="1.0", features=["derive"]}
commonfunctions = { path="../commonfunctions" }

[dev-dependencies]
httpmock = "0.6"
actix-rt = "2"
dotenv = "0.15"
lazy_static = "1"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread", "signal"] }
async-std = { version = "1.10", features = ["attributes", "unstable"] }
